fix(button) - added overflow CSS constraint for ink containment

--- a/src/components/buttons/_buttons.scss
+++ b/src/components/buttons/_buttons.scss
@@ -36,6 +36,7 @@ material-button,
   line-height: inherit;
 
   cursor: pointer;
+  overflow: hidden;   // for ink containment
 
   &.material-button-colored {
     color: $theme-light;
